--- a/src/components/LeftRigtContainer/GridContainer/gridContainer.module.css
+++ b/src/components/LeftRigtContainer/GridContainer/gridContainer.module.css
@@ -1,10 +1,10 @@
 .gridContainer {
   height: inherit;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   margin-top: -1px;
 
   @media (min-width: $phil-breakpoint-md) {
-    padding-top: 60px;
+    padding-top: 35px;
   }
 
   .gridBox {
@@ -23,11 +23,7 @@
         vertical-align: middle;
         font-style: normal;
         line-height: normal;
-        margin-bottom: 40px;
-
-        @media (min-width: $phil-breakpoint-sm) {
-          font-size: 53px;
-        }
+        margin-bottom: 30px;
       }
     }
 
@@ -37,7 +33,7 @@
       .listText {
         font-family: Lato;
         font-weight: 700;
-        font-size: 22px;
+        font-size: 18px;
         line-height: 150%;
         letter-spacing: 0%;
       }
@@ -59,7 +55,7 @@
 
         .border {
           border-radius: 15px;
-          padding: 40px 40px;
+          padding: 20px 36px 15px;
           background-color: #ffffff;
         }
       }
@@ -67,7 +63,9 @@
   }
 
   .mobilePadding {
-    padding: 60px 32px 0;
+    &[data-context="Demo Page"] {
+      padding: 60px 32px;
+    }
   }
 
   .rightSection {
