--- a/src/components/brandOutcomeCard/brandOutcomeCard.module.css
+++ b/src/components/brandOutcomeCard/brandOutcomeCard.module.css
@@ -34,7 +34,7 @@
 	line-height: 1;
 
 	&[data-context='Demo Page'] {
-		font-size: 58px;
+		font-size: 54px;
 		line-height: 120%;
 		letter-spacing: -3px;
 		margin-bottom: -20px;
@@ -60,7 +60,7 @@
 .description {
 	color: var(--Phil-Rebrand-Neutral-Pitch, #0a0a0a);
 	font-family: Raleway, sans-serif;
-	font-size: 24px;
+	font-size: 16px;
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
