--- a/src/components/sectionInColumn/basicSectionColumn/BasicSectionColumn.module.css
+++ b/src/components/sectionInColumn/basicSectionColumn/BasicSectionColumn.module.css
@@ -15,7 +15,7 @@
 .titleH3 {
   text-align: center;
   font-weight: 600;
-  font-size: 32px;
+  font-size: 29px;
   line-height: 32.54px;
 }
 
@@ -62,7 +62,7 @@
   font-weight: 400;
   font-size: 20px;
   margin-top: 0px;
-  margin-bottom: 19px;
+  margin-bottom: 10px;
 }
 .listItem:last-child {
   margin-bottom: 0px;
@@ -97,7 +97,7 @@
 
 .bodyPart {
   font-size: 16px;
-  margin-top: 24px;
+  margin-top: 5px;
 
   &[data-video="true"] {
     text-align: center;
@@ -160,7 +160,7 @@
 .formSection {
   padding: 6px 0px 0px;
   width: 100%;
-  margin-bottom: 36px;
+  margin-bottom: 32px;
 }
 
 .contactSubheader {
